# helix

./: .gitignore  README.md  claude.md  config.py  conftest.py  data.csv  data.json  demo.md  ecom.json  ecom_big.json  eng.json  main.py  plan.md  project_overview.md  pyproject.toml
e2e/: test_docker_smoke.py  test_registry.py
integrations/: telegram_bot.py  telegram_manager.py
notes/: pitfalls.md  success.md  testing.md
orchestrator/: agent.py  providers.py  registry.py
skill_factory/: __init__.py  factory.py  port_manager.py  skill.py
skill_factory/templates/fastapi_skill/: Dockerfile.j2  main.py.j2
