[project]
name = "helix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.78.0",
    "docker>=7.1.0",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "rich>=14.3.2",
]
